--- a/index.html
+++ b/index.html
@@ -19,37 +19,71 @@
 </head>
 
 <body class="font-Karla bg-Green200lighter min-h-screen flex flex-col justify-center items-center">
-  <main class="bg-White mx-[30px] flex flex-col md:w-[730px] md:max-h-[770px] rounded-lg p-12">
+  <main class="bg-White mx-[30px] my-[30px] flex flex-col md:w-[730px] md:max-h-[770px] rounded-lg p-12">
     <header>
       <h1 class="mb-8 font-bold md:text-4xl">Contact Us</h1>
     </header>
     <form>
-      <div class="flex md:flex-row flex-col mb-7">
+      <div class="flex md:flex-row flex-col mb-4">
         <div class="flex flex-col w-full md:w-1/2 md:mr-4">
           <label class="mb-2">
-            First Name
+            <span>First Name</span>
             <span class="text-Green600medium ml-1">*</span>
           </label>
-          <input type="text" class="border-Grey500medium border-[1px] rounded-lg py-2 px-1 w-100">
+          <input type="text" id="first-name" class="rounded-lg py-2 px-1 w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
         </div>
         <div class="flex flex-col w-full md:w-1/2 md:ml-4 md:mt-0 mt-7">
           <label class="mb-2">
-            Last Name
+            <span>Last Name</span>
             <span class="text-Green600medium ml-1">*</span>
           </label>
-          <input type="text" class="border-Grey500medium border-[1px] rounded-lg py-2 px-1 w-100">
+          <input type="text" id="last-name" class="rounded-lg py-2 px-1 w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
         </div>
       </div>
       <div class="flex flex-col">
         <label class="mb-2">
-          Email Address
+          <span>Email Address</span>
           <span class="text-Green600medium ml-1">*</span>
         </label>
-        <input type="text" class="border-Grey500medium border-[1px] rounded-lg py-2 px-1 w-100">
+        <input type="text" id="email" class="rounded-lg py-2 px-1 w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
       </div>
+      <div class="mt-4">
+        <label>
+          <span>Query Type</span>
+          <span class="text-Green600medium ml-1">*</span>
+        </label>
+        <div class="flex md:flex-row flex-col w-full mt-2">
+          <label class="flex md:w-1/2 h-[50px] md:text-base text-sm my-1 md:mr-4 items-center px-6 rounded-lg outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
+            <input type="radio" id="general" name="query-type" value="general" class="w-5 h-5 accent-Green600medium outline-grey-600"/>
+            <span class="ml-2">General Enquiry</span>
+          </label>
+          <label class="flex md:w-1/2 h-[50px] md:text-base text-sm my-1 md:ml-4 items-center px-6 rounded-lg outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
+            <input type="radio" id="support" name="query-type" value="support" class="w-5 h-5 accent-Green600medium"/>
+            <span class="ml-2">Support Request</span>
+          </label>
+        </div>
+      </div>
+      <div class="flex flex-col mt-4">
+        <label for="message">
+          <span>Message</span>
+          <span class="text-Green600medium ml-1">*</span>
+        </label>
+        <textarea id="message" class="md:min-h-[100px] mt-[10px] px-4 py-2 rounded-lg outline outline-1 outline-Grey500medium hover:outline-Green600medium focus:outline-Green600medium focus:invalid:outline-Red"></textarea>
+      </div>
+      <div class="mt-4">
+        <label class="flex md:items-center gap-4 px-1">
+          <input id="consent" type="checkbox" class="w-5 h-5 accent-Green600medium md:w-4 md:h-4"/>
+          <span>
+            <span>I consent to being contacted by the team</span>
+            <span class="text-Green600medium">*</span>
+          </span>
+        </label>
+      </div>
+      <button type="submit" class="w-full mt-4 h-[55px] text-lg rounded-lg bg-Green600medium text-white hover:bg-green-950 col-span-full">Submit</button>
     </form>
   </main>
 
+  <!--
   Contact Us
 
   First Name
@@ -77,7 +111,7 @@
 
   Message Sent!
   Thanks for completing the form. We'll be in touch soon!
-  
+  -->
   <script src="assets/js/script.js"></script>
 </body>
 
