--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body class="font-Karla bg-Green200lighter min-h-screen flex flex-col justify-center items-center">
+  <!-- Submitted Form Container -->
   <div id="submitted" class="hidden bg-Grey900darker p-6 rounded-xl mx-[50px] mt-[30px]">
     <div class="flex flex-row my-2">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" fill="none" viewBox="0 0 20 21">
@@ -28,12 +29,15 @@
     </div>
     <p class="text-Grey500medium text-sm">Thanks for completing the form. We'll be in touch soon!</p>
   </div>
+  <!-- Main Contact Us Form -->
   <main id="main" class="bg-White mx-[30px] mt-[30px] mb-[30px] flex flex-col md:w-[730px] md:max-h-[770px] rounded-lg p-12">
+    <!-- Header -->
     <header>
       <h1 class="mb-8 font-bold md:text-4xl">Contact Us</h1>
     </header>
     <form>
       <div class="flex md:flex-row flex-col mb-4">
+        <!-- First Name Field -->
         <div class="flex flex-col w-full md:w-1/2 md:mr-4">
           <label class="mb-2">
             <span>First Name</span>
@@ -42,6 +46,7 @@
           <input type="text" id="first-name" class="rounded-lg py-2 px-1 w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
           <span id="error-first-name" class="hidden text-Red text-sm mt-1">This field is required</span>
         </div>
+        <!-- Last Name Field -->
         <div class="flex flex-col w-full md:w-1/2 md:ml-4 md:mt-0 mt-7">
           <label class="mb-2">
             <span>Last Name</span>
@@ -51,6 +56,7 @@
           <span id="error-last-name" class="hidden text-Red text-sm mt-1">This field is required</span>
         </div>
       </div>
+      <!-- Email Address Field -->
       <div class="flex flex-col">
         <label class="mb-2">
           <span>Email Address</span>
@@ -59,6 +65,7 @@
         <input type="text" id="email" class="rounded-lg py-2 px-1 w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
         <span id="error-email" class="hidden text-Red text-sm mt-1"></span>
       </div>
+      <!-- Query Type Radios -->
       <div class="mt-4">
         <label>
           <span>Query Type</span>
@@ -76,6 +83,7 @@
         </div>
         <span id="error-query" class="hidden text-Red text-sm">Please select a query type</span>
       </div>
+      <!-- Message Textarea -->
       <div class="flex flex-col mt-4">
         <label for="message">
           <span>Message</span>
@@ -84,6 +92,7 @@
         <textarea id="message" class="md:min-h-[100px] min-h-[150px] mt-[10px] mb-1 px-4 py-2 rounded-lg outline outline-1 outline-Grey500medium hover:outline-Green600medium focus:outline-Green600medium focus:invalid:outline-Red"></textarea>
         <span id="error-msg" class="hidden text-Red text-sm">This field is required</span>
       </div>
+      <!-- Consent Checkbox -->
       <div class="mt-4">
         <label class="flex md:items-center gap-4 px-1 mb-1">
           <input id="consent" type="checkbox" class="w-5 h-5 accent-Green600medium md:w-4 md:h-4"/>
@@ -94,9 +103,11 @@
         </label>
         <span id="error-consent" class="hidden text-Red text-sm">To submit this form, please consent to being contacted</span>
       </div>
+      <!-- Submit Button -->
       <button type="submit" class="w-full mt-4 h-[55px] md:text-lg text-base transition-all duration-500 rounded-lg bg-Green600medium text-white hover:bg-Grey900darker col-span-full">Submit</button>
     </form>
   </main>
+  <!-- Custom JS -->
   <script src="assets/js/script.js"></script>
 </body>
 
