added functionality on form

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <span id="error-consent" class="hidden text-Red text-sm">To submit this form, please consent to being contacted</span>
       </div>
       <!-- Submit Button -->
-      <button type="submit" class="w-full mt-4 h-[55px] md:text-lg text-base transition-all duration-500 rounded-lg bg-Green600medium text-white hover:bg-Grey900darker col-span-full">Submit</button>
+      <button type="button" id="submit-btn" class="w-full mt-4 h-[55px] md:text-lg text-base transition-all duration-500 rounded-lg bg-Green600medium text-white hover:bg-Grey900darker col-span-full">Submit</button>
     </form>
   </main>
   <!-- Custom JS -->
