--- a/index.html
+++ b/index.html
@@ -30,55 +30,55 @@
     <p class="text-Grey500medium text-sm">Thanks for completing the form. We'll be in touch soon!</p>
   </div>
   <!-- Main Contact Us Form -->
-  <main id="main" class="bg-White mx-[30px] mt-[30px] mb-[30px] flex flex-col md:w-[730px] md:max-h-[770px] rounded-lg p-12">
+  <main id="main" class="bg-White mx-[30px] mt-[30px] mb-[30px] flex flex-col md:w-[730px] md:max-h-fit rounded-lg p-12">
     <!-- Header -->
     <header>
-      <h1 class="mb-8 font-bold md:text-4xl">Contact Us</h1>
+      <h1 class="mb-8 font-bold text-Grey900darker md:text-4xl">Contact Us</h1>
     </header>
     <form>
       <div class="flex md:flex-row flex-col mb-4">
         <!-- First Name Field -->
         <div class="flex flex-col w-full md:w-1/2 md:mr-4">
           <label class="mb-2">
-            <span>First Name</span>
+            <span class="text-Grey900darker">First Name</span>
             <span class="text-Green600medium ml-1">*</span>
           </label>
-          <input type="text" id="first-name" class="rounded-lg py-2 px-1 w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
+          <input type="text" id="first-name" name="first-name" class="rounded-lg h-[50px] py-2 px-4 cursor-pointer w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
           <span id="error-first-name" class="hidden text-Red text-sm mt-1">This field is required</span>
         </div>
         <!-- Last Name Field -->
         <div class="flex flex-col w-full md:w-1/2 md:ml-4 md:mt-0 mt-7">
           <label class="mb-2">
-            <span>Last Name</span>
+            <span class="text-Grey900darker">Last Name</span>
             <span class="text-Green600medium ml-1">*</span>
           </label>
-          <input type="text" id="last-name" class="rounded-lg py-2 px-1 w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
+          <input type="text" id="last-name" name="last-name" class="rounded-lg h-[50px] py-2 px-4 cursor-pointer w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
           <span id="error-last-name" class="hidden text-Red text-sm mt-1">This field is required</span>
         </div>
       </div>
       <!-- Email Address Field -->
       <div class="flex flex-col">
         <label class="mb-2">
-          <span>Email Address</span>
+          <span class="text-Grey900darker">Email Address</span>
           <span class="text-Green600medium ml-1">*</span>
         </label>
-        <input type="text" id="email" class="rounded-lg py-2 px-1 w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
+        <input type="text" id="email" name="email" class="rounded-lg h-[50px] py-2 px-4 cursor-pointer w-100 outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
         <span id="error-email" class="hidden text-Red text-sm mt-1"></span>
       </div>
       <!-- Query Type Radios -->
       <div class="mt-4">
         <label>
-          <span>Query Type</span>
+          <span class="text-Grey900darker">Query Type</span>
           <span class="text-Green600medium ml-1">*</span>
         </label>
         <div class="flex md:flex-row flex-col w-full mt-2 mb-1">
-          <label class="flex md:w-1/2 h-[50px] md:text-base text-sm my-1 md:mr-4 items-center px-6 rounded-lg outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
+          <label class="flex md:w-1/2 h-[50px] md:text-base text-sm my-2 md:mr-4 items-center px-6 cursor-pointer rounded-lg outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
             <input type="radio" id="general" name="query-type" value="general" class="w-5 h-5 accent-Green600medium outline-grey-600"/>
-            <span class="ml-2">General Enquiry</span>
+            <span class="text-Grey900darker ml-2">General Enquiry</span>
           </label>
-          <label class="flex md:w-1/2 h-[50px] md:text-base text-sm my-1 md:ml-4 items-center px-6 rounded-lg outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
+          <label class="flex md:w-1/2 h-[50px] md:text-base text-sm my-2 md:ml-4 items-center px-6 cursor-pointer rounded-lg outline outline-1 outline-Grey500medium hover:outline-Green600medium has-[:checked]:outline-Green600medium has-[:checked]:bg-Green200lighter">
             <input type="radio" id="support" name="query-type" value="support" class="w-5 h-5 accent-Green600medium"/>
-            <span class="ml-2">Support Request</span>
+            <span class="text-Grey900darker ml-2">Support Request</span>
           </label>
         </div>
         <span id="error-query" class="hidden text-Red text-sm">Please select a query type</span>
@@ -86,18 +86,18 @@
       <!-- Message Textarea -->
       <div class="flex flex-col mt-4">
         <label for="message">
-          <span>Message</span>
+          <span class="text-Grey900darker">Message</span>
           <span class="text-Green600medium ml-1">*</span>
         </label>
-        <textarea id="message" class="md:min-h-[100px] min-h-[150px] mt-[10px] mb-1 px-4 py-2 rounded-lg outline outline-1 outline-Grey500medium hover:outline-Green600medium focus:outline-Green600medium focus:invalid:outline-Red"></textarea>
+        <textarea id="message" class="md:min-h-[110px] min-h-[150px] mt-[10px] mb-1 px-4 py-2 cursor-pointer rounded-lg outline outline-1 outline-Grey500medium hover:outline-Green600medium focus:outline-Green600medium focus:invalid:outline-Red"></textarea>
         <span id="error-msg" class="hidden text-Red text-sm">This field is required</span>
       </div>
       <!-- Consent Checkbox -->
       <div class="mt-4">
-        <label class="flex md:items-center gap-4 px-1 mb-1">
-          <input id="consent" type="checkbox" class="w-5 h-5 accent-Green600medium md:w-4 md:h-4"/>
+        <label class="flex md:items-center gap-4 px-1 mb-1 cursor-pointer">
+          <input id="consent" type="checkbox" class="w-5 h-5 cursor-pointer accent-Green600medium md:w-4 md:h-4"/>
           <span>
-            <span class="md:text-base text-sm">I consent to being contacted by the team</span>
+            <span class="text-Grey900darker md:text-base text-sm">I consent to being contacted by the team</span>
             <span class="text-Green600medium">*</span>
           </span>
         </label>
