fixed some accessibility issues

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="flex md:flex-row flex-col mb-4">
         <!-- First Name Field -->
         <div class="flex flex-col w-full md:w-1/2 md:mr-4">
-          <label class="mb-2">
+          <label for="first-name" class="mb-2">
             <span class="text-Grey900darker">First Name</span>
             <span class="text-Green600medium ml-1">*</span>
           </label>
@@ -48,7 +48,7 @@
         </div>
         <!-- Last Name Field -->
         <div class="flex flex-col w-full md:w-1/2 md:ml-4 md:mt-0 mt-7">
-          <label class="mb-2">
+          <label for="last-name" class="mb-2">
             <span class="text-Grey900darker">Last Name</span>
             <span class="text-Green600medium ml-1">*</span>
           </label>
@@ -58,7 +58,7 @@
       </div>
       <!-- Email Address Field -->
       <div class="flex flex-col">
-        <label class="mb-2">
+        <label for="email" class="mb-2">
           <span class="text-Grey900darker">Email Address</span>
           <span class="text-Green600medium ml-1">*</span>
         </label>
